# mgr_board

./: .gitignore  .gitmodules  ADCs.kicad_sch  LED_Power_Section_1.kicad_sch  LED_Section.kicad_sch  Led_Power_Section_2.kicad_sch  Led_driver.kicad_sch  Led_driver_adim.kicad_sch  Micro_SD.kicad_sch  Power_supply.kicad_sch  fp-info-cache  fp-lib-table  mgr_board.kicad_pcb  mgr_board.kicad_prl  mgr_board.kicad_pro  mgr_board.kicad_sch  mgr_board.kicad_sch-bak  sym-lib-table  sym_lib.kicad_sym  ~_autosave-mgr_board.kicad_pcb.lck  ~mgr_board.kicad_sch.lck
footprint_lib.pretty/: Bez_nazwy.kicad_mod  HPIO530-4R7.kicad_mod  JR5050CWT.kicad_mod  SOP100P600X165-11N.kicad_mod  XPLDCL.kicad_mod
hw/: LED_Section.kicad_sch-bak  Led_driver_adim.kicad_sch  Micro_SD.kicad_sch  Power_supply.kicad_sch  mgr_board.kicad_pro  mgr_board.kicad_sch-bak
hw/footprint_lib.pretty/: DR125-470-R.kicad_mod  LM2596 DC-DC module.kicad_mod  MCSPQ08ASGTR.kicad_mod  XPLDCL.kicad_mod
hw/production/: designators.csv  netlist.ipc  positions.csv
production/: bom.csv  designators.csv  netlist.ipc  positions.csv
sw/: ADS1148.c  ADS1148.h  CMakeLists.txt  MCP48CV.c  MCP48CV.h  Makefile  global.h  hw_config.c  mgr_board.c  mux.c  mux.h  pwm.c  pwm.h  spi_sd_card.c
